made few changes

--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
         <div class="row">
            <div class="col-md-6">
              <div class="header-links text-md-start text-center">
-                <a href="#un" class="d-md-inline d-block"><span class="icon fa fa-envelope-o"></span> Email : support@ompixs.com</a>
-                <a href="#un" class="d-md-inline d-block mt-md-0 mt-2"><span class="icon fa fa-phone"></span> Tel : +234-343-463-4839</a>
+                <a href="mailto:support@ompixs.com" class="d-md-inline d-block"><span class="icon fa fa-envelope-o"></span> Email : support@ompixs.com</a>
+                <a href="tel:2348120269448" class="d-md-inline d-block mt-md-0 mt-2"><span class="icon fa fa-phone"></span> Tel : +234-812-026-9448</a>
              </div>
            </div>
            <div class="col-md-6 d-none d-md-block">
@@ -66,42 +66,45 @@
         <div class="offcanvas-body pt-0">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="profile.html">Profile</a>
+              <a class="nav-link" href="profile.html">Our Team</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="camera.html" id="dropdownId"
-                  aria-haspopup="true" aria-expanded="false" class="camera-drop">Equipments</a>
-                  <div class="abs-dropicon d-lg-none">
-                    <span class="fa fa-angle-right text-white" id="dropspan1" onclick="getdropdown(1)"></span>
-                </div>
-                <div class="dropdown-menu ak-drop animated animate__faster fadeInUp" id="akmenu1" aria-labelledby="dropdownId">
-                  <a class="dropdown-item" href="#">Nikon</a>
-                  <a class="dropdown-item" href="#">Canon</a>
-                  <a class="dropdown-item" href="#">Sony</a>
-                </div>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link" href="services.html" id="dropdownId"
-                  aria-haspopup="true" aria-expanded="false" class="camera-drop">Services</a>
-                  <div class="abs-dropicon d-lg-none">
-                    <span class="fa fa-angle-right text-white" id="dropspan2" onclick="getdropdown(2)"></span>
-                </div>
-                <div class="dropdown-menu ak-drop animated animate__faster fadeInUp" id="akmenu2" aria-labelledby="dropdownId">
-                  <a class="dropdown-item" href="#">Light</a>
-                  <a class="dropdown-item" href="#">Audio Mixers</a>
-                  <a class="dropdown-item" href="#">Engineering Support</a>
-                  <a class="dropdown-item" href="#">Local Crew Sourcing</a>
-                </div>
-              </li>
-              <li class="nav-item">
+              <a class="nav-link" href="camera.html" id="dropdownId"
+                aria-haspopup="true" aria-expanded="false" class="camera-drop">Equipments</a>
+                <div class="abs-dropicon d-lg-none">
+                  <span class="fa fa-angle-right text-white" id="dropspan1" onclick="getdropdown(1)"></span>
+              </div>
+              <div class="dropdown-menu ak-drop animated animate__faster fadeInUp" id="akmenu1" aria-labelledby="dropdownId">
+                <a class="dropdown-item" href="#">Nikon</a>
+                <a class="dropdown-item" href="#">Canon</a>
+                <a class="dropdown-item" href="#">Sony</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
+            </li>
+            <!-- <li class="nav-item dropdown">
+              <a class="nav-link" href="services.html" id="dropdownId"
+                aria-haspopup="true" aria-expanded="false" class="camera-drop">Services</a>
+                <div class="abs-dropicon d-lg-none">
+                  <span class="fa fa-angle-right text-white" id="dropspan2" onclick="getdropdown(2)"></span>
+              </div>
+              <div class="dropdown-menu ak-drop animated animate__faster fadeInUp" id="akmenu2" aria-labelledby="dropdownId">
+                <a class="dropdown-item" href="#">Light</a>
+                <a class="dropdown-item" href="#">Audio Mixers</a>
+                <a class="dropdown-item" href="#">Engineering Support</a>
+                <a class="dropdown-item" href="#">Local Crew Sourcing</a>
+              </div>
+            </li> -->
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Credits</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Projects</a>
               </li>
@@ -162,56 +165,56 @@
             <div class="col-md-6">
               <a href="#un" class="text-decoration-none">
                <div class="service-content">
-                  <span><i class="la la-plus"></i> The Journey</span>
+                  <span><i class="la la-plus"></i> Content Production</span>
                </div>
               </a>
             </div>
             <div class="col-md-6">
               <a href="#un" class="text-decoration-none">
               <div class="service-content">
-                 <span><i class="la la-plus"></i> Live broadcast / mulitimedia Event</span>
+                 <span><i class="la la-plus"></i> Formats Adaptation</span>
               </div>
             </a>
            </div>
            <div class="col-md-6">
             <a href="#un" class="text-decoration-none">
             <div class="service-content">
-               <span><i class="la la-plus"></i> Films, TV drama and Stage production</span>
+               <span><i class="la la-plus"></i> Commercials</span>
             </div>
           </a>
          </div>
          <div class="col-md-6">
           <a href="#un" class="text-decoration-none">
           <div class="service-content">
-             <span><i class="la la-plus"></i> Documentaries</span>
+             <span><i class="la la-plus"></i> Equipment Rentals</span>
           </div>
         </a>
        </div>
        <div class="col-md-6">
         <div class="service-content">
-           <span><i class="la la-plus"></i> Commercials ad's and Cooperate branding production </span>
+           <span><i class="la la-plus"></i> Concept Development</span>
         </div>
      </div>
      <div class="col-md-6">
       <div class="service-content">
-         <span><i class="la la-plus"></i> Photography service</span>
+         <span><i class="la la-plus"></i> Local Crew Out Sourcing</span>
       </div>
    </div>
    <div class="col-md-6">
     <div class="service-content">
-       <span><i class="la la-plus"></i> Online / Social Media Content production</span>
+       <span><i class="la la-plus"></i> Post Productions</span>
     </div>
   </div>
   <div class="col-md-6">
     <div class="service-content">
-       <span><i class="la la-plus"></i> BTS productions</span>
+       <span><i class="la la-plus"></i> Audio & sound production</span>
     </div>
   </div>
            </div>
   
-           <!-- <div class="mt-4 text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">
-            <a href="#un" class="btn btn-about">See All <i class="la la-long-arrow-right"></i></a>
-          </div> -->
+           <div class="mt-4 text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">
+            <a href="services.html" class="btn btn-about">See All <i class="la la-long-arrow-right"></i></a>
+          </div>
   
         </div>
       </section>
@@ -283,7 +286,8 @@
 
               <div class="contact-info mt-3">
                 <h5 class="text-barlow text-uppercase font-600"><span class="text-green me-1"><i class="fa fa-phone"></i></span> <span class="text-white">Phone Number</span></h5>
-                <p class="font-14">+234-343-463-4839</p>
+                <p class="font-14 mb-0">+234-706-545-5063 (Whatsapp only)</p>
+                <p class="font-14">+234-812-026-9448 (Whatsapp &calls)</p>
               </div>
 
             </div>
@@ -338,9 +342,9 @@
             <div class="col-4">
               <li><a href="#un">Services</a></li>
             </div>
-            <div class="col-4">
+            <!-- <div class="col-4">
               <li><a href="#un">Credits</a></li>
-            </div>
+            </div> -->
             <div class="col-4">
               <li><a href="#un">Projects</a></li>
             </div>
@@ -350,6 +354,9 @@
             <div class="col-4">
               <li><a href="#un">Contact</a></li>
             </div>
+            <div class="col-4">
+              
+            </div>
             </div>
             </ul>
           </div>
@@ -358,7 +365,7 @@
             <ul class="foot-list">
               <li><a href="#un"><span class="text-green me-1"><i class="fa fa-home"></i></span> Address : Banana Island, Lagos, Nigeria.</a></li>
               <li><a href="#un"><span class="text-green me-1"><i class="fa fa-envelope-o"></i></span> Email : support@ompixs.com</a></li>
-              <li><a href="#un"><span class="text-green me-1"><i class="fa fa-phone"></i></span> Phone Number : +234-343-463-4839</a></li>
+              <li><a href="javascript:void(0);"><span class="text-green me-1"><i class="fa fa-phone"></i></span> Phone Number :</a> <a href="tel:2348120269448">+2348120269448</a><a href="javascript:void(0);">(Whatsapp & Calls),</a> <a href="https://api.whatsapp.com/send?phone=2347065455063&text=Hello%20OMPIXS%20I%20have%20an%20enquiry%20to%20make." target="_blank">+2347065455063</a><a href="javascript:void(0);">(Whatsapp only)</a></li>
             </ul>
           </div>
         </div>
@@ -375,7 +382,7 @@
 
   </footer>
 
-  <a href="https://api.whatsapp.com/send?phone=2343434634839&text=Hello%20OMPIXS%20I%20have%20an%20enquiry%20to%20make." class="float" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=2347065455063&text=Hello%20OMPIXS%20I%20have%20an%20enquiry%20to%20make." class="float" target="_blank">
     <i class="fa fa-whatsapp my-float"></i>
     </a>
 
