--- a/camera.html
+++ b/camera.html
@@ -35,8 +35,8 @@
         <div class="row">
            <div class="col-md-6">
              <div class="header-links text-md-start text-center">
-                <a href="#un" class="d-md-inline d-block"><span class="icon fa fa-envelope-o"></span> Email : support@ompixs.com</a>
-                <a href="#un" class="d-md-inline d-block mt-md-0 mt-2"><span class="icon fa fa-phone"></span> Tel : +234-343-463-4839</a>
+              <a href="mailto:support@ompixs.com" class="d-md-inline d-block"><span class="icon fa fa-envelope-o"></span> Email : support@ompixs.com</a>
+              <a href="tel:2348120269448" class="d-md-inline d-block mt-md-0 mt-2"><span class="icon fa fa-phone"></span> Tel : +234-812-026-9448</a>
              </div>
            </div>
            <div class="col-md-6 d-none d-md-block">
@@ -66,42 +66,45 @@
         <div class="offcanvas-body pt-0">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="profile.html">Profile</a>
+              <a class="nav-link" href="profile.html">Our Team</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link active" href="camera.html" id="dropdownId"
-                  aria-haspopup="true" aria-expanded="false" class="camera-drop">Equipments</a>
-                  <div class="abs-dropicon d-lg-none">
-                    <span class="fa fa-angle-right text-white" id="dropspan1" onclick="getdropdown(1)"></span>
-                </div>
-                <div class="dropdown-menu ak-drop animated animate__faster fadeInUp" id="akmenu1" aria-labelledby="dropdownId">
-                  <a class="dropdown-item" href="#">Nikon</a>
-                  <a class="dropdown-item" href="#">Canon</a>
-                  <a class="dropdown-item" href="#">Sony</a>
-                </div>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link" href="services.html" id="dropdownId"
-                  aria-haspopup="true" aria-expanded="false" class="camera-drop">Services</a>
-                  <div class="abs-dropicon d-lg-none">
-                    <span class="fa fa-angle-right text-white" id="dropspan2" onclick="getdropdown(2)"></span>
-                </div>
-                <div class="dropdown-menu ak-drop animated animate__faster fadeInUp" id="akmenu2" aria-labelledby="dropdownId">
-                  <a class="dropdown-item" href="#">Light</a>
-                  <a class="dropdown-item" href="#">Audio Mixers</a>
-                  <a class="dropdown-item" href="#">Engineering Support</a>
-                  <a class="dropdown-item" href="#">Local Crew Sourcing</a>
-                </div>
-              </li>
-              <li class="nav-item">
+              <a class="nav-link" href="camera.html" id="dropdownId"
+                aria-haspopup="true" aria-expanded="false" class="camera-drop">Equipments</a>
+                <div class="abs-dropicon d-lg-none">
+                  <span class="fa fa-angle-right text-white" id="dropspan1" onclick="getdropdown(1)"></span>
+              </div>
+              <div class="dropdown-menu ak-drop animated animate__faster fadeInUp" id="akmenu1" aria-labelledby="dropdownId">
+                <a class="dropdown-item" href="#">Nikon</a>
+                <a class="dropdown-item" href="#">Canon</a>
+                <a class="dropdown-item" href="#">Sony</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
+            </li>
+            <!-- <li class="nav-item dropdown">
+              <a class="nav-link" href="services.html" id="dropdownId"
+                aria-haspopup="true" aria-expanded="false" class="camera-drop">Services</a>
+                <div class="abs-dropicon d-lg-none">
+                  <span class="fa fa-angle-right text-white" id="dropspan2" onclick="getdropdown(2)"></span>
+              </div>
+              <div class="dropdown-menu ak-drop animated animate__faster fadeInUp" id="akmenu2" aria-labelledby="dropdownId">
+                <a class="dropdown-item" href="#">Light</a>
+                <a class="dropdown-item" href="#">Audio Mixers</a>
+                <a class="dropdown-item" href="#">Engineering Support</a>
+                <a class="dropdown-item" href="#">Local Crew Sourcing</a>
+              </div>
+            </li> -->
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Credits</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Projects</a>
               </li>
@@ -343,9 +346,9 @@
             <div class="col-4">
               <li><a href="#un">Services</a></li>
             </div>
-            <div class="col-4">
+            <!-- <div class="col-4">
               <li><a href="#un">Credits</a></li>
-            </div>
+            </div> -->
             <div class="col-4">
               <li><a href="#un">Projects</a></li>
             </div>
@@ -355,6 +358,9 @@
             <div class="col-4">
               <li><a href="#un">Contact</a></li>
             </div>
+            <div class="col-4">
+              
+            </div>
             </div>
             </ul>
           </div>
@@ -363,7 +369,7 @@
             <ul class="foot-list">
               <li><a href="#un"><span class="text-green me-1"><i class="fa fa-home"></i></span> Address : Banana Island, Lagos, Nigeria.</a></li>
               <li><a href="#un"><span class="text-green me-1"><i class="fa fa-envelope-o"></i></span> Email : support@ompixs.com</a></li>
-              <li><a href="#un"><span class="text-green me-1"><i class="fa fa-phone"></i></span> Phone Number : +234-343-463-4839</a></li>
+              <li><a href="javascript:void(0);"><span class="text-green me-1"><i class="fa fa-phone"></i></span> Phone Number :</a> <a href="tel:2348120269448">+2348120269448</a><a href="javascript:void(0);">(Whatsapp & Calls),</a> <a href="https://api.whatsapp.com/send?phone=2347065455063&text=Hello%20OMPIXS%20I%20have%20an%20enquiry%20to%20make." target="_blank">+2347065455063</a><a href="javascript:void(0);">(Whatsapp only)</a></li>
             </ul>
           </div>
         </div>
@@ -380,7 +386,7 @@
 
   </footer>
 
-  <a href="https://api.whatsapp.com/send?phone=2343434634839&text=Hello%20OMPIXS%20I%20have%20an%20enquiry%20to%20make." class="float" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=2347065455063&text=Hello%20OMPIXS%20I%20have%20an%20enquiry%20to%20make." class="float" target="_blank">
     <i class="fa fa-whatsapp my-float"></i>
     </a>
 
