--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div class="row">
            <div class="col-md-6">
              <div class="header-links text-md-start text-center">
-                <a href="#un" class="d-md-inline d-block"><span class="icon fa fa-envelope-o"></span> Email : support@ompixs.com</a>
-                <a href="#un" class="d-md-inline d-block mt-md-0 mt-2"><span class="icon fa fa-phone"></span> Tel : +234-343-463-4839</a>
+              <a href="mailto:support@ompixs.com" class="d-md-inline d-block"><span class="icon fa fa-envelope-o"></span> Email : support@ompixs.com</a>
+              <a href="tel:2348120269448" class="d-md-inline d-block mt-md-0 mt-2"><span class="icon fa fa-phone"></span> Tel : +234-812-026-9448</a>
              </div>
            </div>
            <div class="col-md-6 d-none d-md-block">
@@ -72,7 +72,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="profile.html">Profile</a>
+              <a class="nav-link" href="profile.html">Our Team</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" href="camera.html" id="dropdownId"
@@ -86,7 +86,10 @@
                 <a class="dropdown-item" href="#">Sony</a>
               </div>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
+            </li>
+            <!-- <li class="nav-item dropdown">
               <a class="nav-link" href="services.html" id="dropdownId"
                 aria-haspopup="true" aria-expanded="false" class="camera-drop">Services</a>
                 <div class="abs-dropicon d-lg-none">
@@ -98,10 +101,10 @@
                 <a class="dropdown-item" href="#">Engineering Support</a>
                 <a class="dropdown-item" href="#">Local Crew Sourcing</a>
               </div>
-            </li>
-              <li class="nav-item">
+            </li> -->
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Credits</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Projects</a>
               </li>
@@ -146,7 +149,7 @@
               <div class="col-lg-6">
               <div class="banner-textarea">
                 <h1 class="text-uppercase text-berbas"><span class="text-white">Optical</span> <span class="text-green">Motion</span> <span class="text-white">Pictures</span></h1>
-                <p class="font-300">Premium Experience in Videography : Movie and Film Production, Professionals in Reality TV Shows, Advertising and online audio-visual content platforms.</p>
+                <p class="font-300">Premium experience in Broadcast and cinema production. Television, film, commercials, advertising and online audio-visual content platform.</p>
                 <div class="banner-button mt-3">
                     <a href="#un" class="btn btn-banner text-barlow text-uppercase">Contact Us</a>
                 </div>
@@ -168,8 +171,8 @@
           <div class="row">
             <div class="col-lg-6">
             <div class="banner-textarea">
-              <h1 class="text-uppercase text-berbas"><span class="text-white">Rentals of </span> <span class="text-green">Media</span> <span class="text-white">Equipments</span></h1>
-              <p class="font-300">We also make provisions for Rental of Media/Production Equipments of Good Quality that would serve you excellently for your events.</p>
+              <h1 class="text-uppercase text-berbas"><span class="text-white">Rentals </span> <span class="text-green">Support</span> <span class="text-white">Services</span></h1>
+              <p class="font-300">We provide equipments and Rentals support services for both studio and outside broadcast, recorded and live productions.</p>
               <div class="banner-button mt-3">
                   <a href="#un" class="btn btn-banner text-barlow text-uppercase">Contact Us</a>
               </div>
@@ -208,7 +211,7 @@
 
     <section class="welcome-area">
       <div class="container text-center wow fadeInUp" data-wow-duration="1s">
-         <h2><span class="text-green">OMPIXS</span> <span class="text-white">- VIDEOGRAPHY AND</span> <span class="text-red">EQUIPMENT RENTALS</span></h2>
+         <h2><span class="text-green">OMPIXS</span> <span class="text-white">- OPTICAL MOTION</span> <span class="text-red">PICTURES</span></h2>
          <p class="mt-2">Ompixs is a Nigerian production company based in Lagos that specializes in providing high-quality audiovisual productions. We have established ourselves as a one-stop-production hub, offering a wide range of services from pre-production to post-production and distribution.</p>
          <p>Over the years, Ompixs has gained a reputation for delivering excellent technical support services to major TV and online content producers in Nigeria. We have partnered with renowned companies such as Africa Magic, Showmax, and Multichoice Nigeria, and have contributed to the production of popular shows including BBN, Date my Family Nigeria, Shoot your shot Nigeria, Unmarried, and What Will People Say game shows.</p>
          <p>Our mission is to become the top indigenous Nigerian and African private syndicating production hub. We aim to excel in all aspects of content production, from technical expertise to manpower, and from pre-production to distribution and broadcasting worldwide. Ompixs strives to consistently deliver professional and high-quality work, placing emphasis on customer satisfaction.</p>
@@ -227,8 +230,14 @@
              <p class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.2s">Adeyemi Kolade is one of Nigerian fast rising  and Africans TV Technical director &  director of photography, with more than ten years of experience in capturing and producing exceptional video content for TV, films, advertising, and online audio-visual platforms. He is the founder of Optical Motions Pictures (Ompixs).</p>
              <p class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.4s">Adeyemi's journey began in 2008 when he started as a TV engineering student at NTA Channel 10 Lagos, after which he moved to Lagos Network Centre and began working as a camera assistant. He quickly progressed through various roles in different production units, including sound, editing, vision mixing, associate producing, directing, and producing live entertainment shows and segments for shows like Africa Magic (AM) Express, Morning Ride, Newsline, Tales by Moonlight, and The Entertainers.</p>
              <p class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.6s">Having gained extensive experience, Adeyemi embarked on freelance work, collaborating with independent content producers and TV shows across Lagos. In 2014, he joined Blink Africa as a full-time contract staff member, working as the Director of Photography for major TV content shows on Africa Magic, such as Hustle, Truth, Unmarried, Shoot Your Shot, Date My Family Nigeria, and Dilemma.</p>
+             <div class="collapse" id="contentId">
+              <p>Throughout his career, Adeyemi has worked with renowned production companies like Daydreams Productions, Lucid Production, Urban Vision, Dragon Africa, Storm360 Production, Delmedia, Red-media, The Lovelynclair TV Show, and on shows like The Voice Nigeria, Ignite Africa, The Terakulture theatre shows, Discovery +234, Throwback on Mnet, Taruwa, and Guiness Worldcup Jessey in 2010.</p>
+              <p>In 2019, Adeyemi became one of the twelve Nigerian Technical Directors on the popular reality TV show Big Brother Nigeria (BBN), directing for three consecutive seasons. He also served as the Reunion Studio Set-Up Manager and Technical Director for seasons 4-7, and worked as the Director of Photography for the AMVCA announcement and various corporate branded events and conference productions.</p>
+              <p>Adeyemi's services include video coverage for weddings, conferences, and corporate events. He specializes in documentary production, corporate profiles, TV series, reality show production, commercials, online content, live events, and multimedia. His expertise lies in bringing clients' visions to life through creative and engaging storytelling.</p>
+              <p>Recognizing the significance of social media, Adeyemi also offers social media content creation services, ensuring impactful videos that stand out on platforms like Instagram, Facebook, TikTok, and YouTube.</p>
+             </div>
              <div class="mt-2 wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.8s">
-              <a href="profile.html" class="btn btn-about">View Profile <i class="la la-long-arrow-right"></i></a>
+              <a href="#contentId" data-bs-toggle="collapse" aria-expanded="false" aria-controls="contentId" class="btn btn-about">Read <span id="moreless">More</span> <i class="la la-long-arrow-right"></i></a>
             </div>
           </div>
 
@@ -327,56 +336,56 @@
           <div class="col-md-6">
             <a href="#un" class="text-decoration-none">
              <div class="service-content">
-                <span><i class="la la-plus"></i> The Journey</span>
+                <span><i class="la la-plus"></i> Content Production</span>
              </div>
             </a>
           </div>
           <div class="col-md-6">
             <a href="#un" class="text-decoration-none">
             <div class="service-content">
-               <span><i class="la la-plus"></i> Live broadcast / mulitimedia Event</span>
+               <span><i class="la la-plus"></i> Formats Adaptation</span>
             </div>
           </a>
          </div>
          <div class="col-md-6">
           <a href="#un" class="text-decoration-none">
           <div class="service-content">
-             <span><i class="la la-plus"></i> Films, TV drama and Stage production</span>
+             <span><i class="la la-plus"></i> Commercials</span>
           </div>
         </a>
        </div>
        <div class="col-md-6">
         <a href="#un" class="text-decoration-none">
         <div class="service-content">
-           <span><i class="la la-plus"></i> Documentaries</span>
+           <span><i class="la la-plus"></i> Equipment Rentals</span>
         </div>
       </a>
      </div>
      <div class="col-md-6">
       <div class="service-content">
-         <span><i class="la la-plus"></i> Commercials ad's and Cooperate branding production </span>
+         <span><i class="la la-plus"></i> Concept Development</span>
       </div>
    </div>
    <div class="col-md-6">
     <div class="service-content">
-       <span><i class="la la-plus"></i> Photography service</span>
+       <span><i class="la la-plus"></i> Local Crew Out Sourcing</span>
     </div>
  </div>
  <div class="col-md-6">
   <div class="service-content">
-     <span><i class="la la-plus"></i> Online / Social Media Content production</span>
+     <span><i class="la la-plus"></i> Post Productions</span>
   </div>
 </div>
 <div class="col-md-6">
   <div class="service-content">
-     <span><i class="la la-plus"></i> BTS productions</span>
+     <span><i class="la la-plus"></i> Audio & sound production</span>
   </div>
 </div>
          </div>
 
-         <!-- <div class="mt-4 text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">
-          <a href="#un" class="btn btn-about">See All <i class="la la-long-arrow-right"></i></a>
-        </div> -->
+         <div class="mt-4 text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">
+          <a href="services.html" class="btn btn-about">See All <i class="la la-long-arrow-right"></i></a>
+        </div>
 
       </div>
     </section>
@@ -673,7 +682,8 @@
 
               <div class="contact-info mt-3">
                 <h5 class="text-barlow text-uppercase font-600"><span class="text-green me-1"><i class="fa fa-phone"></i></span> <span class="text-white">Phone Number</span></h5>
-                <p class="font-14">+234-343-463-4839</p>
+                <p class="font-14 mb-0">+234-706-545-5063 (Whatsapp only)</p>
+                <p class="font-14">+234-812-026-9448 (Whatsapp &calls)</p>
               </div>
 
             </div>
@@ -753,9 +763,9 @@
             <div class="col-4">
               <li><a href="#un">Services</a></li>
             </div>
-            <div class="col-4">
+            <!-- <div class="col-4">
               <li><a href="#un">Credits</a></li>
-            </div>
+            </div> -->
             <div class="col-4">
               <li><a href="#un">Projects</a></li>
             </div>
@@ -765,6 +775,9 @@
             <div class="col-4">
               <li><a href="#un">Contact</a></li>
             </div>
+            <div class="col-4">
+
+            </div>
             </div>
             </ul>
           </div>
@@ -773,7 +786,7 @@
             <ul class="foot-list">
               <li><a href="#un"><span class="text-green me-1"><i class="fa fa-home"></i></span> Address : Banana Island, Lagos, Nigeria.</a></li>
               <li><a href="#un"><span class="text-green me-1"><i class="fa fa-envelope-o"></i></span> Email : support@ompixs.com</a></li>
-              <li><a href="#un"><span class="text-green me-1"><i class="fa fa-phone"></i></span> Phone Number : +234-343-463-4839</a></li>
+              <li><a href="javascript:void(0);"><span class="text-green me-1"><i class="fa fa-phone"></i></span> Phone Number :</a> <a href="tel:2348120269448">+2348120269448</a><a href="javascript:void(0);">(Whatsapp & Calls),</a> <a href="https://api.whatsapp.com/send?phone=2347065455063&text=Hello%20OMPIXS%20I%20have%20an%20enquiry%20to%20make." target="_blank">+2347065455063</a><a href="javascript:void(0);">(Whatsapp only)</a></li>
             </ul>
           </div>
         </div>
@@ -790,7 +803,7 @@
 
   </footer>
 
-  <a href="https://api.whatsapp.com/send?phone=2343434634839&text=Hello%20OMPIXS%20I%20have%20an%20enquiry%20to%20make." class="float" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=2347065455063&text=Hello%20OMPIXS%20I%20have%20an%20enquiry%20to%20make." class="float" target="_blank">
     <i class="fa fa-whatsapp my-float"></i>
     </a>
 
@@ -960,6 +973,15 @@ $('.testi-content').slick({
           $('.video-bg').show();
           $('.close-hidden').hide();
         }
+
+        const myCollapsible = document.getElementById('contentId')
+myCollapsible.addEventListener('hidden.bs.collapse', event => {
+    $('#moreless').html('More');
+});
+
+myCollapsible.addEventListener('shown.bs.collapse', event => {
+    $('#moreless').html('Less');
+});
         
       </script>
 
